# LongCOVID_GNN

./: .dockerignore  .gitignore  3_testing_evaluation.py  FP_short_08_understand.py  README.md  Taskfile.yml  baseline_stats.json  check_genes.py  config.json  download_parquet_files.py  failed_rcts.txt  gwas_genes_long_covid.txt  long_covid_disease_therapeutic_edge.csv  long_covid_drug_repurposing.py  medicines_tested.txt  pyproject.toml  requirements.txt  run_gnn_explainer.py  run_pipeline.py  search_drug_predictions.py  setup.py  shortcut_disease.py  train_CI.py
.task/: run.yml
docker/: Dockerfile  entrypoint.sh
docs/: NEW_DISEASE_GUIDE.md
scripts/: 1_create_graph.py  2_train_models.py  3_test_evaluate.py  4_explain_predictions.py  5_optimise_hyperparameters.py  6_long_covid_repurposing.py  create_baseline.py  create_paper_plots.py  debug_edges.py  heuristic_baselines.py  leave_one_out_validation.py  tournament.sh  verify_refactor.py
src/: __init__.py  bayesian_optimiser.py  config.py  custom_losses.py  data_processing.py  data_processing_backup.py  mlflow_tracker.py  models.py  models_seal.py  negative_sampling.py  utils.py
tests/: README.md  conftest.py  test_common.py  test_config.py  test_data_faithfulness.py  test_data_filters.py  test_data_invariants.py  test_data_loaders.py  test_data_mappers.py  test_data_processing.py  test_data_storage.py  test_edge_extraction.py  test_edge_features.py  test_edge_utils.py  test_eval_utils.py  test_feature_utils.py  test_features.py  test_graph_builder.py  test_graph_construction.py  test_graph_split.py  test_losses.py  (+16 more)
(+51 files in other folders)
